test/files/neg/array-not-seq.check
array-not-seq.scala:2: error: An Array will no longer match as Seq[_].
  def f1(x: Any) = x.isInstanceOf[Seq[_]]
                                 ^
error: An Array will no longer match as Seq[_].
error: An Array will no longer match as Seq[_].
error: An Array will no longer match as Seq[_].
four errors found
